--- a/DeepTrace/Pages/Index.razor
+++ b/DeepTrace/Pages/Index.razor
@@ -5,32 +5,33 @@
 
 @inject ITrainedModelStorageService TrainedModelService
 
-<PageTitle>Index</PageTitle>
+<PageTitle>DeepTrace</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h1>Dashboard</h1>
 
 @if (_trainedModels != null)
 {
     @foreach(TrainedModelDefinition model in _trainedModels)
+    {
+        <ModelCard Model="@model"/>
+    }
+} 
+else
 {
-    <ModelCard Model="@model"/>
+    <MudText>Nothing to display. Train AI models first!</MudText>
 }
-} else
+
+
+@code
 {
-    <MudText>Nothing to display</MudText>
-}
 
+    private List<TrainedModelDefinition> _trainedModels = new();
 
-@code{
-private List<TrainedModelDefinition> _trainedModels = new();
+    protected override async Task OnInitializedAsync()
+    {
+        base.OnInitialized();
+        _trainedModels = await TrainedModelService.Load();
 
-protected override async Task OnInitializedAsync()
-{
-    base.OnInitialized();
-    _trainedModels = await TrainedModelService.Load();
-
-}
+    }
 
 }
